--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -8,3 +8,4 @@
         <a href="{{ page.url }}">{{ page.title }}</a>
     {% endif %}
 {% endfor %}
+  <a href="/contact"><small>☎</small> (541) 521-9076</a>
