--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,16 +9,22 @@ layout: default
 
 <div class="post-header mb2">
   <h1>{{ page.title }}</h1>
-  <span class="post-meta">{{ page.date | date: site.date_format }}</span><br>
+  <span class="post-meta">
+    <!-- {{ page.date | date: site.date_format }} -->
+    Family owned, insured & bonded Commercial & Residential cleaning services.
+  </span>
+  <br>
   {% if page.update_date %}
-    <span class="post-meta">{{ site.text.post.updated }}: {{ page.update_date | date: site.date_format }}</span><br>
-  {% endif %}
+    <span class="post-meta">
+    <!-- {{ site.text.post.updated }}: {{ page.update_date | date: site.date_format }}</span><br> -->
+    {% endif %}
   <span class="post-meta small">
-  {% if page.minutes %}
+    Try us … Call or text now! &nbsp;<span class="blue">☎ &nbsp;(541) 521-9076</span>
+    <!--   {% if page.minutes %}
     {{ page.minutes }} {{ site.text.post.minute_read }}
-  {% else %}
-    {{ minutes }} {{ site.text.post.minute_read }}
-  {% endif %}
+    {% else %}
+      {{ minutes }} {{ site.text.post.minute_read }}
+    {% endif %} -->
   </span>
 </div>
 
